fixes column alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@ body{
   background-size:cover;
 }
 #wrapper{
-  border:2px green dashed;
+  // border:2px green dashed;
   height:700px;
   width:100%;
 }
